# avmir

./: Cargo.toml  README.md
examples/: fork.txt  hello_world.txt
examples/concurrent_rw/: loop_read.txt  loop_write.txt
libs/avmir_std/: Cargo.toml
libs/avmir_std/src/: lib.rs
src/: args.rs  lib.rs  main.rs
src/parser/: mod.rs  simple.rs  simple_v1.rs  simple_v2.rs
src/vm/: ffi.rs  instruction.rs  machine.rs  memory.rs  mod.rs  process.rs  program.rs  stack.rs
